src/test/ui/generic-associated-types/parameter_number_and_kind.stderr
error: type-generic associated types are not yet implemented
  --> $DIR/parameter_number_and_kind.rs:9:5
   |
LL |     type D<T>;
   |     ^^^^^^^^^^
   |
   = note: for more information, see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error: type-generic associated types are not yet implemented
  --> $DIR/parameter_number_and_kind.rs:11:5
   |
LL |     type E<'a, T>;
   |     ^^^^^^^^^^^^^^
   |
   = note: for more information, see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error: type-generic associated types are not yet implemented
  --> $DIR/parameter_number_and_kind.rs:14:5
   |
LL |     type FOk<T> = Self::E<'static, T>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error: type-generic associated types are not yet implemented
  --> $DIR/parameter_number_and_kind.rs:19:5
   |
LL |     type FErr2<T> = Self::E<'static, T, u32>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error[E0107]: wrong number of lifetime arguments: expected 1, found 2
  --> $DIR/parameter_number_and_kind.rs:16:35
   |
LL |     type FErr1 = Self::E<'static, 'static>;
   |                                   ^^^^^^^ unexpected lifetime argument

error[E0107]: wrong number of type arguments: expected 1, found 0
  --> $DIR/parameter_number_and_kind.rs:16:18
   |
LL |     type FErr1 = Self::E<'static, 'static>;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^ expected 1 type argument

error[E0107]: wrong number of type arguments: expected 1, found 2
  --> $DIR/parameter_number_and_kind.rs:19:41
   |
LL |     type FErr2<T> = Self::E<'static, T, u32>;
   |                                         ^^^ unexpected type argument

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0107`.
